--- a/Tests.EF/packages.config
+++ b/Tests.EF/packages.config
@@ -6,7 +6,7 @@
   <package id="NUnit3TestAdapter" version="3.15.1" targetFramework="net45" />
   <package id="SQLite.CodeFirst" version="1.1.11.0" targetFramework="net452" />
   <package id="System.Data.SQLite" version="1.0.99.0" targetFramework="net45" />
-  <package id="System.Data.SQLite.Core" version="1.0.99.0" targetFramework="net45" />
-  <package id="System.Data.SQLite.EF6" version="1.0.99.0" targetFramework="net45" />
-  <package id="System.Data.SQLite.Linq" version="1.0.99.0" targetFramework="net45" />
+  <package id="System.Data.SQLite.Core" version="1.0.99.0" targetFramework="net45" requireReinstallation="true" />
+  <package id="System.Data.SQLite.EF6" version="1.0.99.0" targetFramework="net45" requireReinstallation="true" />
+  <package id="System.Data.SQLite.Linq" version="1.0.99.0" targetFramework="net45" requireReinstallation="true" />
 </packages>
